--- a/requirements.txt
+++ b/requirements.txt
@@ -24,10 +24,12 @@ pip==24.0
 pydantic==2.6.3
 PyMuPDF==1.24.13
 pyxnat==1.6.2
+python-dotenv==1.0.0
 rank-bm25==0.2.2
 semchunk==2.2.2
 sentence-transformers==3.4.1
 streamlit==1.40.2
+tenacity==9.1.2
 tiktoken==0.7.0
 watchfiles==0.24.0
 websockets==13.1
