--- a/requirements.txt
+++ b/requirements.txt
@@ -25,9 +25,11 @@ pydantic==2.6.3
 PyMuPDF==1.24.13
 pyxnat==1.6.2
 python-dotenv==1.0.0
+pymysql==1.1.0
 rank-bm25==0.2.2
 semchunk==2.2.2
 sentence-transformers==3.4.1
+sqlalchemy==2.0.40
 streamlit==1.40.2
 tenacity==9.1.2
 tiktoken==0.7.0
