--- a/requirements.txt
+++ b/requirements.txt
@@ -3,17 +3,17 @@ cohere==5.13.11
 configobj==5.0.9
 configparser==7.1.0
 docling==2.23.1
-fastapi==0.110.1
-uvicorn==0.26.0
+fastapi==0.115.12
+uvicorn==0.34.2
 Flask==2.0.3
 git-filter-repo==2.47.0
 httplib2==0.22.0
 httptools==0.6.4
-langchain-chroma==0.1.4
+langchain-chroma==0.2.3
 langchain-community==0.3.5
-langchain-openai==0.2.5
-langchain-qdrant==0.1.6
-qdrant-client==1.10.0
+langchain-openai==0.3.14
+langchain-qdrant==0.2.0
+qdrant-client==1.14.2
 langchainhub==0.1.21
 langgraph==0.2.45
 markitdown==0.0.1a3
@@ -22,17 +22,18 @@ nipype==1.9.0
 nltk==3.9.1
 pip==24.0
 psutil==6.1.0
-pydantic==2.6.3
+pydantic==2.11.3
 PyMuPDF==1.24.13
 pyxnat==1.6.2
-python-dotenv==1.0.0
-pymysql==1.1.0
+python-dotenv==1.1.0
+pymysql==1.1.1
 rank-bm25==0.2.2
 semchunk==2.2.2
 sentence-transformers==3.4.1
 sqlalchemy==2.0.40
 streamlit==1.40.2
 tenacity==9.1.2
-tiktoken==0.7.0
+tiktoken==0.9.0
 watchfiles==0.24.0
 websockets==13.1
+langchain==0.3.24
